cka/network_services_authorization_rbac/ingress/ingress2_domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80
  ingressClassName: nginx
  rules:
  - host: "foo.xpto.xyz" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo-nginx
            port:
              number: 80
  - host: "bar.xpto.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bar-httpd
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: default-backend
            port:
              number: 80
